# PictureAnnotator

./: AGENTS.md  README.md  pyproject.toml
config/: config.example.toml
docs/: CONFIG.md  GUI.md  OUTPUT_SCHEMA.md  OUTSOURCE_BBOX_GUIDE.md  TUNING.md  UV.md
scripts/: init_project.py  run_detection.py  run_gui.py  summarize_outsource_workload.py  summarize_results.py
src/picture_annotator/: config.py  image_utils.py  output.py  paths.py  pipeline.py  project.py  visualize.py
src/picture_annotator/detectors/: __init__.py  base.py  yolo_sahi.py
src/picture_annotator/gui/: __init__.py  canvas.py  main_window.py  models.py  store.py
tests/: conftest.py  test_config.py  test_output.py  test_paths.py
